cloned the project

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="view-transition" content="same-origin" />
-    <title>SEOELLA</title>
+    <link rel="icon" type="image/x-icon" href="./src/assets/icons/Favicon Transparent.ico">
+    <title>SEO AI Ranker</title>
   </head>
   <body>
     <div id="root"></div>
